# DiplomskiRad

./: .gitignore
Backend/: CMakeLists.txt  ObjResourceFactory.cpp  ObjService.cpp  ObjServiceSettingsFactory.cpp  main.cpp
Backend/include/: IService.h  ObjResourceFactory.h  ObjService.h  ObjServiceSettingsFactory.h  Object3DModel.h
WebApp/: test.js
WebApp/webgl-frontend/: package.json
WebApp/webgl-frontend/src/: App.js
WebApp/webgl-frontend/src/components/: CustomCanvas.js
